# limit_order_book_matching_engine

./: .gitignore  EXPLANATION.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  static.yml
docs/: benchmark.html  benchmark.js  engine.js  index.html  script.js  style.css
matching_engine/: CMakeLists.txt  build_all.sh  build_wasm.sh
matching_engine/bench/: baseline_engine.cpp  benchmark.cpp  benchmark_runner.cpp  export_events.cpp  latency_stats.hpp  optimized_engine.cpp  standalone_bench.cpp  workload_generator.hpp
matching_engine/src/: baseline_book.cpp  baseline_book.hpp  event_logger.hpp  fill.hpp  matching_engine.cpp  matching_engine.hpp  order.hpp  order_book.cpp  order_book.hpp  order_pool.hpp  price_level.hpp  server.cpp  shared_state.hpp  timer.hpp  wasm_bridge.cpp
matching_engine/tests/: order_book_tests.cpp
matching_engine/web/: engine.wasm  index.html  script.js  style.css
